[gd_scene load_steps=14 format=3 uid="uid://byjv0a1bqhth4"]

[ext_resource type="Script" path="res://KCards/cards/card_baseForBattle.gd" id="1_p2tyu"]
[ext_resource type="Texture2D" uid="uid://cpqg55nr6rty" path="res://KCards/images/card/assets/card_background.png" id="2_sro1b"]
[ext_resource type="Texture2D" uid="uid://b8ddq782puiod" path="res://KCards/images/card/assets/cost.png" id="3_tq1ch"]
[ext_resource type="Texture2D" uid="uid://dk4s6c4tmy4vv" path="res://KCards/images/card/assets/nameBackground.png" id="4_mp6nn"]
[ext_resource type="Texture2D" uid="uid://dnkdaij3wakdx" path="res://KCards/images/card/assets/card_desc_background.png" id="5_r3lox"]
[ext_resource type="Texture2D" uid="uid://b2t2uy2u2t7ps" path="res://KCards/images/card/assets/attack.png" id="6_wmrt1"]
[ext_resource type="Texture2D" uid="uid://cgc8jyiyuoncy" path="res://KCards/images/card/assets/hp.png" id="7_i5ln5"]

[sub_resource type="Animation" id="Animation_30etn"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(250, 300)]
}

[sub_resource type="Animation" id="Animation_1p5fy"]
resource_name = "Scale_Grow"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.353554, 0.353553),
"update": 0,
"values": [Vector2(0.34, 0.34), Vector2(0.612, 0.612)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2.2974, 0.366021),
"update": 0,
"values": [Vector2(350, 440), Vector2(350, 250)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cbg2t"]
_data = {
"RESET": SubResource("Animation_30etn"),
"Scale_Grow": SubResource("Animation_1p5fy")
}

[sub_resource type="Animation" id="Animation_o7q66"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(250, 220), Vector2(250, 300)]
}

[sub_resource type="Animation" id="Animation_ptqwt"]
resource_name = "Scale_Grow_small"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.482968, 0.466516),
"update": 0,
"values": [Vector2(0.34, 0.34), Vector2(0.612, 0.612)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2.46229, 0.450625),
"update": 0,
"values": [Vector2(350, 100), Vector2(350, 220)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5vjf4"]
_data = {
"RESET": SubResource("Animation_o7q66"),
"Scale_Grow_small": SubResource("Animation_ptqwt")
}

[node name="CardBase" type="Node2D"]
position = Vector2(250, 220)
scale = Vector2(0.34, 0.34)
script = ExtResource("1_p2tyu")

[node name="Button" type="TextureButton" parent="."]
custom_minimum_size = Vector2(255, 350)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_top = -175.0
offset_right = 127.5
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(127.5, 175)

[node name="Background" type="Sprite2D" parent="Button"]
position = Vector2(130, 176)
texture = ExtResource("2_sro1b")

[node name="Bars" type="VBoxContainer" parent="Button"]
layout_mode = 0
offset_right = 255.0
offset_bottom = 350.0

[node name="TopBar" type="HBoxContainer" parent="Button/Bars"]
layout_mode = 2

[node name="LeftGap" type="MarginContainer" parent="Button/Bars/TopBar"]
custom_minimum_size = Vector2(209, 0)
layout_mode = 2

[node name="Cost" type="MarginContainer" parent="Button/Bars/TopBar"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Button/Bars/TopBar/Cost"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Button/Bars/TopBar/Cost"]
layout_mode = 2

[node name="costBackground" type="Sprite2D" parent="Button/Bars/TopBar/Cost/CenterContainer"]
position = Vector2(23, 24)
scale = Vector2(1.094, 1)
texture = ExtResource("3_tq1ch")

[node name="Cost" type="Label" parent="Button/Bars/TopBar/Cost/CenterContainer/costBackground"]
offset_left = -30.6216
offset_top = -25.0
offset_right = 31.3784
offset_bottom = 13.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Cost"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MidGap" type="MarginContainer" parent="Button/Bars"]
custom_minimum_size = Vector2(255, 100)
layout_mode = 2

[node name="Image" type="Sprite2D" parent="Button/Bars"]
position = Vector2(127.5, 175)

[node name="Name" type="MarginContainer" parent="Button/Bars"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Button/Bars/Name"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Button/Bars/Name"]
layout_mode = 2

[node name="nameBackground" type="Sprite2D" parent="Button/Bars/Name/CenterContainer"]
position = Vector2(131.5, 63)
scale = Vector2(0.725, 0.95)
texture = ExtResource("4_mp6nn")

[node name="Name" type="Label" parent="Button/Bars/Name/CenterContainer/nameBackground"]
offset_left = -181.0
offset_top = -18.0
offset_right = 177.0
offset_bottom = 17.0
theme_override_colors/font_color = Color(0.423529, 0.411765, 0, 1)
theme_override_colors/font_shadow_color = Color(0.952941, 0.952941, 0.952941, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Description" type="MarginContainer" parent="Button/Bars"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Button/Bars/Description"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Button/Bars/Description"]
layout_mode = 2

[node name="descrBackground" type="Sprite2D" parent="Button/Bars/Description/CenterContainer"]
position = Vector2(128.5, 162)
scale = Vector2(0.718815, 0.567675)
texture = ExtResource("5_r3lox")

[node name="Description" type="Label" parent="Button/Bars/Description/CenterContainer/descrBackground"]
offset_left = -142.0
offset_top = -95.0
offset_right = 144.0
offset_bottom = 94.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="LowerGap" type="MarginContainer" parent="Button/Bars"]
custom_minimum_size = Vector2(255, 185)
layout_mode = 2

[node name="BottomBar" type="HBoxContainer" parent="Button/Bars"]
layout_mode = 2

[node name="Attack" type="MarginContainer" parent="Button/Bars/BottomBar"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Button/Bars/BottomBar/Attack"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Button/Bars/BottomBar/Attack"]
layout_mode = 2

[node name="attackBackground" type="Sprite2D" parent="Button/Bars/BottomBar/Attack/CenterContainer"]
position = Vector2(21.5, 27)
scale = Vector2(1.094, 1)
texture = ExtResource("6_wmrt1")

[node name="Attack" type="Label" parent="Button/Bars/BottomBar/Attack/CenterContainer/attackBackground"]
modulate = Color(0.215686, 0.937255, 0.847059, 1)
offset_left = -80.8958
offset_top = -95.0
offset_right = 79.1042
offset_bottom = 88.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Attack"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="LeftGap" type="MarginContainer" parent="Button/Bars/BottomBar"]
custom_minimum_size = Vector2(209, 0)
layout_mode = 2

[node name="Health" type="MarginContainer" parent="Button/Bars/BottomBar"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Button/Bars/BottomBar/Health"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Button/Bars/BottomBar/Health"]
layout_mode = 2

[node name="healthBackground" type="Sprite2D" parent="Button/Bars/BottomBar/Health/CenterContainer"]
position = Vector2(20, 23)
scale = Vector2(0.9, 0.823)
texture = ExtResource("7_i5ln5")

[node name="Health" type="Label" parent="Button/Bars/BottomBar/Health/CenterContainer/healthBackground"]
offset_left = -42.7778
offset_top = -19.4411
offset_right = 39.2222
offset_bottom = 18.5589
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Health"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cbg2t")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5vjf4")
}

[connection signal="gui_input" from="Button" to="." method="_on_button_gui_input"]
